# Obsidian_Doctor

./: .gitignore  README.md  example_config.yaml  example_report.json  pyproject.toml
app/: __init__.py  __main__.py  cli.py
app/config/: __init__.py  loader.py  schema.py
app/gui/: __init__.py  web.py
app/gui/static/: style.css
app/gui/templates/: base.html  details.html  index.html
app/indexer/: __init__.py  builder.py  scanner.py
app/models/: __init__.py  entities.py  report.py
app/parser/: __init__.py  markdown.py
app/reporting/: __init__.py  io.py  pipeline.py  summary.py
app/rules/: __init__.py  base.py  builtin_rules.py  engine.py
tests/: test_markdown_parser.py  test_rules.py
