[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-doctor"
version = "0.1.0"
description = "Read-only local analyzer for Obsidian vault hygiene"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["gui/templates/*.html", "gui/static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]